build: workspace 改成 organization